--- a/index.css
+++ b/index.css
@@ -241,6 +241,7 @@ h1.watermark {
     display: flex;
     overflow: hidden;
     padding: var(--fz-52) 0;
+    font-weight: 100;
 }
 
 ul.list-inline li {
