--- a/utilities.css
+++ b/utilities.css
@@ -235,7 +235,7 @@ button.secondary:hover {
     padding: var(--fz-32);
     background-color: var(--transparent-white);
     border-radius: var(--fz-12);
-    color: inherit;
+    color: var(--white);
 }
 
 .card h4 {
@@ -376,6 +376,7 @@ nav.hide {
 
 .hamburger {
     display: none;
+    font-size: var(--fz-32);
 }
 
 .hidden-button {
